--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
             <artifactId>ij</artifactId>
             <version>1.51h</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
+
 
 </project>
